--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "bis2bis/module-book-publishers",
     "version": "1.0.0",
-    "description": "N/A",
+    "description": "Magento 2 module to manage book publishers and link them to products",
     "type": "magento2-module",
     "require": {
         "php": ">=8.1",
