--- a/composer.json
+++ b/composer.json
@@ -4,11 +4,11 @@
     "description": "Magento 2 module to manage book publishers and link them to products",
     "type": "magento2-module",
     "require": {
-        "php": ">=8.1",
+        "php": ">=7.4",
         "magento/framework": "*"
       },
     "license": [
-        "proprietary"
+        "MIT"
     ],
     "authors": [
         {
