--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "type": "magento2-module",
     "require": {
         "php": ">=7.4",
-        "magento/framework": "*"
+        "magento/framework": ">=101"
       },
     "license": [
         "MIT"
